--- a/reykjavik/assets/scss/_tools/__index.scss
+++ b/reykjavik/assets/scss/_tools/__index.scss
@@ -6,6 +6,7 @@
 @import 'function-round';
 @import 'function-str-replace';
 
+@import 'mixin-button-focus';
 @import 'mixin-media';
 @import 'mixin-gallery-caption';
 @import 'mixin-haf';
